--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -8,8 +8,13 @@
     margin-right: 54px;}
 .navbar-nav > li > a{ text-transform: capitalize; padding: 0; font-size: 16px; color: #1C2220; line-height: 1.278;text-decoration: none; margin: 15px;}
 .navbar-nav > li:hover, .navbar-nav > li:hover > a { color: #000;}
-.active, .active > a{
+/* .active, .active > a{
 
+} */
+div.grow{
+    padding: 0;
+    width: 100% !important;
+    margin: auto !important;
 }
 li.active::before{
     content: "";
@@ -27,7 +32,7 @@ li.active::before{
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;}
 
-.nav>li>a:hover, .nav>li>a:focus { background: none !important;}
+.nav > li > a:hover, .nav> li >a:focus { background: none !important;}
 
 .profile-image{ width: 43px; height: 35px;}
 
@@ -55,9 +60,6 @@ li.active::before{
     position: fixed;
     top: 0;
     background:#fff;
-    z-index: 1;
-    margin-right: auto;
-    margin-left: auto;
     background: var(--general-color);
 }
 
