--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,11 +11,6 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-.site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
 
 /*font classes*/
 .barlow{font-family: 'Barlow Condensed', sans-serif !important;} 
